--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/index.js" defer></script>
-</head>
-<body>
-    <h1>Test</h1>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WeatherChecker</title>
+    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/16ab966864.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>Weather Checker</h1>
+      <form id="search-form">
+        <input id="search-input" type="text" placeholder="" />
+        <button id="search-by-text" type="submit">Search</button>
+        <button id="search-by-location" type="submit">Use Your Location</button>
+      </form>
+      <span id="powered-by">
+        Powered By <br />
+        OpenWeatherMap API
+      </span>
+    </header>
+    <main id="content"></main>
+  </body>
 </html>
