--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/16ab966864.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/png" href="./icon.svg"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,700;1,400&display=swap"
       rel="stylesheet"
